static/css/style.css
/* google fonts */
@import url('https://fonts.googleapis.com/css2?family=Hind:wght@400;500;700&family=Poppins:wght@300;400;500;700&display=swap');

/* main colours used on site */
:root {
  --main-text-color: #172A3A;
  --irish-green: #169B62;
  --decoration1: #83C5BE;
  --decoration2: #EDF6F9;

}

html {
  scroll-behavior: smooth;
}


/* flex setting in order to fix footer, per materialize docs */
body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  background: linear-gradient(#169b6111, rgba(161, 204, 186, 0.5));
}


main {
  flex: 1 0 auto;
}

h1 {
  color: var(--irish-green);
  font-family: 'Hind', sans-serif;
  font-size: 45px;
  text-align: center;

}

h2 {
  color: var(--irish-green);
  font-family: 'Hind', sans-serif;
  font-size: 35px;
  text-align: center;
}

h4{
  color: var(--irish-green);
  font-family: 'Hind', sans-serif;
  font-size: 20px;
  text-align: center;
}

h5{
  color: var(--irish-green);
  font-family: 'Hind', sans-serif;
  font-size: 15px;
  text-align: center;
}
h6 {
  font-family: 'Hind', sans-serif;
  font-weight: bold;
}

p {
  color: var(--main-text-color);
  font-family: 'Poppins', sans-serif;
  font-size: 14px;
}

td {
  width: 50vw;
}

footer,
.nav-wrapper {
  background-color: #83C5BE;
  color: #172A3A;
}

.flashes h5 {
  color: var(--decoration2);
  background-color: var(--irish-green);
  line-height: 2;

  top:50;
}
#flash-msg-icon {
  color: var(--decoration2);
  padding-right: 5px;
}

#flash-msg-close {
  color: rgb(228, 210, 187);
  padding-left: 5px;
}



/* recommendation card fields */
.field-type {
  width: 50vw;
}

.field-option {
  width: 25vw;
}

.dropdown-content {
  background-color: var(--decoration2);
}

/* Recommendation Cards */
.card {
  border-radius: 1%;
}

.card.medium .card-image+.card-content {
  max-height: 55%;
  padding-bottom: 9px;
  padding-top: 9px;
}

/* action card on recommendation to click to reveal more */
.card.medium .card-action {
  padding-top: 2px;
  padding-bottom: 5px;
  color: var(--irish-green);
  font-size: 12.5px;
  font-family: 'Poppins', sans-serif;
}

.card-actions {
  height: 19px;
  position: absolute;
}

hr {
  margin-bottom: 3px;
}

/* set height of title section on front card */
#recommend-title {
  font-style: italic;
  font-size: 14px;
  font-weight: bold;
  height: 30px;
}

/* set height of details section on front card */
#recommend-details-user {
  height: 50px;
  overflow: hidden;
}

/* to give spacing between title and content */
#user-card-content p {
  padding-top: 4px;
}

/* set img height to 100% of its container so that all imgs appear same size */
img {
  height: 100%;
}

/* 
give id to the close text on the card 
seperate id needed to target just the text 
*/
#reveal-close {
  font-size: 20px;
}

/* 
set font style on card title
appearing on card reveal. Close and icon 
*/
.card-title {
  color: var(--irish-green);
  font-family: 'Hind', sans-serif;
}

/* card image set to 35% height of card */
.card-image {
  height: 38%;
  object-fit: contain;
  border-radius: 9%;
  padding: 4px 4px 0 4px;
}

.card .card-reveal {
  background-color: #a9d3c1;
}

/* Search card styling */
.search-card {
  background-color: var(--decoration2);
}

#search-input {
  margin: 10px;
}

/* search on admin user page */
/* style input box border */
.input-field #search {
  border-bottom: 2px solid var(--irish-green);
}

/* registration page */

/* style button */
.register>button {
  color: var(--main-text-color);
  background-color: var(--decoration2);
}

/* Add new page */

/*cancel btn on edit recommendations 
action buttons on add new field */
.btn.tooltipped {
  margin-bottom: 10px;
}

.input-field {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

/* to change bg color of card div on user pg
for a visual to user, that this is a different pg to Home
use hex value for decoration2, then color pick to adjust
*/
#table {
  background-color: #fff;
}

/* change bg color on forms to distinguish */
#newlocation {
  background-color: #dce1e233
}

#newvisitor {
  background-color: #c9d7db79
}

.form-sections {
  background-color: var(--decoration2);
  padding-top: 2px;
}

/* Other buttons across the site */
.btn,
.btn-small {
  color: var(--main-text-color);
  background-color: var(--decoration1);
  font-weight: bold;
  font-family: 'Poppins', sans-serif;
  font-size: 12px;
}

/* buttons within search box Home and user pages */
#search-action,
.search-action-btn {
  margin-top: 25px;
}

/* Search icon btn */
#home-search-button {
  color: var(--main-text-color);
  background-color: #edf6f900;
  font-weight: bold;
  font-family: 'Poppins', sans-serif;
  font-size: 35px;
  border: none;
}

#home-search-button>.fa-search:hover {
  color: var(--main-text-color)
}

#clear-search {
  margin-top: 20px;
  margin-bottom: 5px;
}

#clear-search>a {
  color: var(--irish-green);
  font-family: 'Poppins', sans-serif;
}

#clear-search>a:hover {
  color: var(--main-text-color)
}

/* upload page for admin only */
#upload_widget {
  background-color: var(--decoration2);
  color: var(--main-text-color);
  margin: 5px;
  font-size: 10px;
  font-family: 'Poppins', sans-serif;
  font-weight: bold;
}

.btn-flat:hover {
  font-weight: bold;
  text-decoration: underline;
}

.btn:hover,
.btn-small:hover {
  color: var(--decoration2);
  background-color: var(--irish-green);
  font-weight: bold;
}
/* end of upload pg */

/* button styling across a number of pages including clear search and add new */
.page-btn {
  background-color: white;
  margin: 5px;
  font-size: 10px;
}

.modal-close {
  color: var(--irish-green);
  background-color: var(--decoration2);
  font-weight: bold;
}

.modal-close:hover {
  color: var(--decoration2);
  background-color: var(--irish-green);
  font-weight: bold;
}

#register-modal p,
#instruction-modal-btn li {
  font-family: 'Poppins', sans-serif;
  color: var(--main-text-color); 
  font-size: 12px; 
}

#instruction-modal-btn li{
  list-style-type: disc;
}

#instruction-modal-btn ul{
  margin: 10px 5px 10px 5px;
}
#instruction-modal-btn{
font-size: 35px;
}

#instruction-modal-btn .modal-content{
  padding-bottom: 10px;
  }

.admin-btns {
  margin: 25px;
  background-color: #fff;
}

.cloudinary-button {
  background-color: white;
  color: var(--main-text-color);
  margin: 5px;
  font-size: 10px;
  font-family: 'Poppins', sans-serif;
  font-weight: bold;
}

/* admin add a new field buttons */
.add-new {
  line-height: 1;
}

/* icon across the site */
.fa-caret-down {
  font-size: 14px;
}

.fas,
.far,
.fab {
  color: #169B62;
}

.fab {
  font-size: 26px;
  padding: 10px;
}

/* text in footer */
.copyright {
  font-size: 12px;
}

/* to target icons set as prefixs on input fields */
.input-field .prefix {
  font-size: 1.5rem;
}

.fa-times-circle:hover {
  color: var(--decoration2);
}

/* style ireland icon on navbar */
.nav-wrapper img {
  margin-left: 25px;
  padding-bottom: 0;
  padding-top: 2px;
}


/* 
Code for back to top icon from a tutorial
https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
/* style back to top of page icon */
#backToTopBtn {
  display: none;
  position: fixed;
  bottom: 65px;
  right: 30px;
  z-index: 99;
  border: none;
  background: none;
  color: var(--irish-green);
  cursor: pointer;
}

#backToTopBtn>i {
  font-size: 30px;
}

#backToTopBtn>i:hover {
  color: var(--decoration1);
}

/* hero image on home pg */
.scroll-1 {
  width: 100%;
  height: 35vh;
  background: url(../images/hero-lake-img.jpg);
  background-size: 100% 60%;
  background-attachment: fixed;
  background-repeat: no-repeat;
  position: relative;
  object-fit: contain;
}

/* hero image on users pg */
.scroll-2 {
  width: 100%;
  height: 35vh;
  background: url(../images/long-hall-dublin.jpg);
  background-size: 100% 60%;
  background-attachment: fixed;
  background-repeat: no-repeat;
  position: relative;
  object-fit: contain;
}

/* styling 404 page */
#error404-bg {
  background: url(../images/404-bg.jpg) no-repeat center center fixed;
  background-size: cover;
  height: 100vh;
  width:100vw;
  float:left;
 }

 #error404-bg p,
 #error500-bg p {
 font-family: 'Poppins', sans-serif;
 font-weight: bold;
}
 
.link-home{ 
   font-family: 'Poppins', sans-serif;
  font-size: 45px;
  text-align: center;
padding-top:55px;

}
.link-home a {
  color: var(--main-text-color);
  font-family: 'Hind', sans-serif;
}

.link-home a:hover {
  color: var(--irish-green); 
}

